--- a/css/styles.css
+++ b/css/styles.css
@@ -20,6 +20,15 @@ body{
    font-size: 14px;
 }
 
+.container {
+   margin-left: auto;
+   margin-right: auto;
+   width: 1200px;
+   outline: 2px solid tomato;
+   padding-right: 15px;
+   padding-left: 15px;
+}
+
 /* Оформление логотипов */
 .logo{
    padding-top: 0;
@@ -75,7 +84,13 @@ body{
    font-size: 16px;
    line-height: 1.62;
 }
-
+.btn-list{
+   display: flex;
+   justify-content: center;
+}
+.btn-list .item + .item{
+   margin-left: 8px;
+}
 .button:hover,
 .button:focus{
    color: var(--white-color);
@@ -98,17 +113,30 @@ body{
 }
 
 /* Header  Site nav*/
+.page-header{
+   border-bottom: 1px solid #ECECEC;
+}
+.main-header{
+display: flex;
+align-items: center;
+}
 
-.container{
-   margin: 0 auto;
-   width: 1200px;
-   outline: 2px solid tomato;
-   padding: 0 15px;
+.site-nav{
+display: flex;
+margin-left: 93px;
+}
+.site-nav .item + .item{
+   margin-left: 50px;
 }
 
 .site-nav .link{
+   display: block;
+      padding-top: 20px;
+      padding-bottom: 20px;
+
    color: var(--title-text-color);
 }
+
 .site-nav .link:hover, 
 .site-nav .link:focus{
 color: var(--accent-color);
@@ -126,7 +154,20 @@ color: var(--accent-color);
 }
 
 /* Auth-nav */
+.auth-nav {
+   display: flex;
+   margin-left: auto;
+}
+
+.auth-nav .item + .item{
+   margin-left: 50px;
+}
+
 .auth-nav .link{
+   display: block;
+   padding-top: 20px;
+   padding-bottom: 20px;
+
    color:var(--primary-text-color);
 }
 .auth-nav .link:hover,
@@ -136,6 +177,9 @@ color: var(--accent-color);
 /* Hero */
 
 .hero{
+   padding-bottom: 200px;
+   padding-top: 200px;
+
    background-color: var(--bcg-color);
 
    text-align: center;
@@ -166,6 +210,13 @@ color: var(--accent-color);
    line-height: 1.14;
    text-transform: uppercase;
 }
+.feature-list{
+   display: flex;
+}
+.feature-list .item + .item{
+   margin-left: 30px;
+}
+
 .feature-list p{
    line-height: 1.71;
 
@@ -176,8 +227,13 @@ color: var(--accent-color);
 /* Section Чем мы занимаемся*/
 .section{
    padding-top: 0;
-   padding-bottom: 0;
-   margin-bottom: 94px;
+   padding-bottom: 94px;
+}
+.about-us{
+   display: flex;
+}
+.about-us .item+.item {
+   margin-left: 30px;
 }
 .section-title{
       margin-top: 0px;
@@ -191,21 +247,27 @@ color: var(--accent-color);
 
 /* Section team */
 .section-team {
-   margin-top: 0;
    padding-top: 94px;
+   padding-bottom: 94px;
 
    background-color: var(--bcg-second-color);
 }
 
 .title{
    margin-bottom: 10px;
-   margin-top: 0;
+   margin-top: 30px;
 
    color: var(--title-text-color);
 
    font-weight: 500;
    font-size: 16px;
    line-height: 1.19;
+}
+.team-list{
+   display: flex;
+}
+.team-list .item+.item {
+   margin-left: 30px;
 }
 .team-list .text{
    margin-top: 0;
@@ -254,16 +316,47 @@ color: var(--accent-color);
 
 /* Портфолио */
 
+.portfolio{
+   margin-top: 94px;
+   margin-bottom: 94px;
+}
+.list.page{
+   display: flex;
+   flex-wrap: wrap;
+   margin-top: 50px;
+}
+
+.page .item{
+   width: calc((100% - 60px)/3);
+   margin-right: 30px;
+   border: 1px solid #EEEEEE;
+   margin-bottom: 30px;
+}
+.page .item:nth-child(3n){
+   margin-right: 0px;
+}
+.page .item:nth-last-child(-n+3) {
+   margin-bottom: 0px;
+}
+
 .page .features-title{
+   margin-bottom: 4px;
+
    text-transform: none;
    font-size: 18px;
    line-height: 2;
    letter-spacing: 0.06em;
 } 
 .page p{
+   margin-top: 0;
+   margin-bottom: 0;
+
    color: var(--primary-text-color);
 
    font-size: 16px;
    line-height: 1.87;
+}
+.content{
+   margin: 20px 24px;
 }
 
