--- a/css/styles.css
+++ b/css/styles.css
@@ -10,14 +10,33 @@
 }
 
 body{
-   
-
    color: var(--primary-text-color);
    background-color: var(--white-color);
 
    font-family: Roboto, sans-serif;
    letter-spacing: 0.03em;
    font-size: 14px;
+}
+
+/* Утилиты*/
+.list {
+   list-style: none;
+   padding: 0;
+   margin: 0;
+}
+
+.link {
+   text-decoration: none;
+}
+
+.section {
+   padding-top: 94px;
+   padding-bottom: 94px;
+}
+
+img{
+   display: block;
+   max-width: 100%;
 }
 
 .container {
@@ -28,7 +47,9 @@ body{
    padding-right: 15px;
    padding-left: 15px;
 }
-
+.hidden{
+   
+}
 /* Оформление логотипов */
 .logo{
    padding-top: 0;
@@ -87,10 +108,13 @@ body{
 .btn-list{
    display: flex;
    justify-content: center;
+   margin-bottom: 50px;
 }
+
 .btn-list .item + .item{
    margin-left: 8px;
 }
+
 .button:hover,
 .button:focus{
    color: var(--white-color);
@@ -102,37 +126,31 @@ body{
    color: var(--white-color);
 }
 
-/* Cброс точек и подчеркиваний ссылок*/
-.list{
-   list-style: none;
-   padding: 0;
-   margin: 0;
-}
-.link{
-   text-decoration: none;
-}
-
 /* Header  Site nav*/
 .page-header{
-   border-bottom: 1px solid #ECECEC;
+   outline: 1px solid #ECECEC;
 }
+
 .main-header{
-display: flex;
-align-items: center;
+   display: flex;
+   align-items: center;
 }
 
 .site-nav{
-display: flex;
-margin-left: 93px;
+   display: flex;
 }
+
 .site-nav .item + .item{
    margin-left: 50px;
+}
+.row{
+   margin-left: 93px;
 }
 
 .site-nav .link{
    display: block;
-      padding-top: 20px;
-      padding-bottom: 20px;
+   padding-top: 32px;
+   padding-bottom: 32px;
 
    color: var(--title-text-color);
 }
@@ -175,7 +193,6 @@ color: var(--accent-color);
    color: var(--accent-color);
 }
 /* Hero */
-
 .hero{
    padding-bottom: 200px;
    padding-top: 200px;
@@ -196,10 +213,7 @@ color: var(--accent-color);
    letter-spacing: 0.06em;
 }
 /* Секция features */
-.features{
-   padding-top: 94px;
-   padding-bottom: 94px;
-}
+
 .features-title{
    margin-top: 0;
    margin-bottom: 10px;
@@ -213,6 +227,10 @@ color: var(--accent-color);
 .feature-list{
    display: flex;
 }
+.feature-list .item{
+   width: 270px;
+}
+
 .feature-list .item + .item{
    margin-left: 30px;
 }
@@ -224,11 +242,11 @@ color: var(--accent-color);
    margin-bottom: 0;
 }
 
-/* Section Чем мы занимаемся*/
-.section{
+/* About Чем мы занимаемся*/
+.about{
    padding-top: 0;
-   padding-bottom: 94px;
 }
+
 .about-us{
    display: flex;
 }
@@ -255,13 +273,17 @@ color: var(--accent-color);
 
 .title{
    margin-bottom: 10px;
-   margin-top: 30px;
-
+   margin-top: 0;
+   
    color: var(--title-text-color);
 
    font-weight: 500;
    font-size: 16px;
    line-height: 1.19;
+}
+.box{
+   padding-top: 30px;
+   padding-bottom: 30px;
 }
 .team-list{
    display: flex;
@@ -277,7 +299,12 @@ color: var(--accent-color);
    line-height: 1.19;   
 }
 .team-list > .item{
-   padding-bottom: 30px;
+   background: #FFFFFF;
+   box-shadow: 
+      0px 1px 3px rgba(0, 0, 0, 0.12),
+      0px 1px 1px rgba(0, 0, 0, 0.14),
+      0px 2px 1px rgba(0, 0, 0, 0.2);
+   border-radius: 0px 0px 4px 4px;
 
    text-align: center;
 }
@@ -289,15 +316,27 @@ color: var(--accent-color);
    background-color: var(--bcg-color);
 }
 
-.address{
-   margin-top: 20px;
+.main-footer .logo, .location, .contacts{
+   display: block;
+}
 
+.address{
    font-style: normal;
    line-height: 2;
-
 }
+
+.main-footer .logo{
+   margin-bottom: 20px;    
+}
+
 .location{
+   margin-bottom: 9px;
+
    color: var(--white-color);
+}
+
+.contacts {
+   margin-bottom: 9px;
 }
 
 .contacts, .telephone {
@@ -315,15 +354,9 @@ color: var(--accent-color);
 }
 
 /* Портфолио */
-
-.portfolio{
-   margin-top: 94px;
-   margin-bottom: 94px;
-}
 .list.page{
    display: flex;
    flex-wrap: wrap;
-   margin-top: 50px;
 }
 
 .page .item{
@@ -332,9 +365,11 @@ color: var(--accent-color);
    border: 1px solid #EEEEEE;
    margin-bottom: 30px;
 }
+
 .page .item:nth-child(3n){
    margin-right: 0px;
 }
+
 .page .item:nth-last-child(-n+3) {
    margin-bottom: 0px;
 }
